# streetrace

./: .coveragerc  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  CONV.md  LICENSE  Makefile  OUTPUT.md  PR_60_IMPLEMENTATION_PLAN.md  PR_REVIEW_POC.md  README-claude.md  README-ollama.md  README-openai.md  README.md  TODO.md  ai_interface.py  ai_provider_factory.py  check_ruff.py  ci.Dockerfile  claude.py  claude_provider.py  code-review-feedback.json  code-review-result.md  colors.py  example_claude.py  example_gemini.py  file_review.json  gemini.py  gemini_optimized.py  gemini_provider.py  main.py  messages.py  mypy.ini  ollama_client.py  ollama_provider.py  (+18 more)
.claude/: settings.json
.claude/agents/: documenter.md  implementer.md  manual-e2e-tester.md  pre-commit.md
.claude/commands/: implement_rfc.md  subtask.md
.claude/hooks/: stop-verify.sh
.devcontainer/: .bash_aliases  .bashrc  Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/templates/: code-review-prompt.md
.github/workflows/: IMPROVED_ARCHITECTURE_PROPOSAL.md  code-review-simple.yml  code-review-working.yml  code-review.yml  pr-regression-check.yml  profile_startup.yml  quality-checks.yml  release.yml  test-minimal.yml
.streetrace/: .gitignore  CONVERSATIONS.md  claude.typedef.py  coding_guide.md  gemini.typedef.py  github-review-config.yaml  mcp_servers.yaml  ollama.typedef.py  openai.typedef.py  project_overview.md  python.md  red-team-default.yaml  rules.md  system.md  system_message.txt
agents/: agent_schema.yaml  generic.sr  generic.yml  generic_dump.py  orchestrator.sr  orchestrator.yml  resolver.sr  resolver_dump.py  reviewer.sr  reviewer.yml  software_security_analyst.yaml  spec_writer.sr  two_rail.sr
agents/code-review/: test-patterns.sr  v1-monolithic.sr  v2-parallel.sr  v3-hierarchical.sr
agents/coder/: agent.py  agent_executor.py
agents/hello_world/: README.md  agent.py
agents/test_workloads/: basic_dsl.sr  basic_yaml.yaml  e2e_test.sr  invalid_syntax.sr
app/: application.py  command_executor.py  console_ui.py  interaction_manager.py  prompt_processor.py
docker/github-action/: Dockerfile
docs/: 017-dsl-compiler-todo.md  GITHUB_ACTIONS_SETUP.md  claude_data_conversion.md  configure.md  provider_interface.md
docs/commands/: compact.md
docs/design/: code-review-agent.md  code-review-benchmark.md
docs/dev/: 020-plan.md
docs/research/: code-review-agent-research.md  drift.md  dsl.md
docs/rfcs/: conversation-history-management.md
docs/tasks/: 017-dsl-compiler-implementation-report.md  017-dsl-compiler-task.md  017-dsl-compiler-todo.md
docs/testing/: 017-dsl-compiler-testing.md
docs/user/: GETTING_STARTED.md  backend-configuration.md  getting started goal.md  redis_caching.md  using_tools.md
examples/: example_openai.py  non_interactive_example.py  run_non_interactive.sh
llm/: claude.py  claude_converter.py  gemini.py  generate.py  history_converter.py  llmapi.py  llmapi_factory.py  ollama.py  openai.py  wrapper.py
llm/claude/: converter.py  impl.py
llm/gemini/: converter.py  impl.py
llm/ollama/: converter.py  impl.py
llm/openai/: converter.py  impl.py
schema/: agent.v1.json
scripts/: README-testing.md  code-review-poc.sh  compare_profiles.py  extract-diff.sh  format.py  format_profile.py  github-diff-extractor.sh  profile_startup.py  substitute-variables.py  test-code-review-local.sh  test-code-review.sh  test-github-workflow.sh  test-per-file-review.sh  test-simple-review.sh  validate-config.sh
src/demo/: interaction_manager.py  testmain.py
src/streetrace/: __init__.py  app.py  app_name.py  app_state.py  application.py  args.py  bash_handler.py  completer.py  config_loader.py  configure.py  costs.py  history.py  history_manager.py  input_handler.py  interaction_manager.py  list_agents.py  llm_interface.py  log.py  logging.py  main.py  messages.py  output_file_handler.py  path_completer.py  preload_deps.py  prompt_processor.py  retry_test.py  session_md.py  session_service.py  system_context.py  telemetry.py  terminal_session.py  version.py
templates/: code-review-prompt.md  github-code-review.md  github-review-prompt.md  structured-code-review-prompt.md
tests/: is_ignored_test.py  load_gitignore_test.py  read_directory_structure_gitignore_test.py  read_directory_structure_glob_test.py  read_directory_structure_test.py  read_file_test.py  security_path_test.py  test_ai_provider.py  test_application.py  test_claude_converter.py  test_claude_rate_limit.py  test_claude_transform_history.py  test_command_executor.py  test_completer.py  test_gemini.py  test_history_manager.py  test_interaction_manager.py  test_mentions.py  test_openai.py  test_openai_transform_history.py  test_path_utils.py  test_prompt_parameter.py  test_search.py  test_session_service.py  test_session_service.py.json  test_session_service.py.md  test_system_context.py  write_file_test.py
tests/commands/: test_clear_command.py  test_command_executor.py  test_compact_command.py
tests/dsl/: test_agent_loader_instruction.py  test_agent_loader_model.py  test_agent_loader_tools.py  test_agent_prompt_produces.py  test_agentic_patterns.py  test_ast.py  test_bare_variables.py  test_cache.py  test_cli.py  test_cli_dump_python.py  test_code_review_agents.py  test_codegen.py  test_codegen_patterns.py  test_comma_separated_tools.py  test_compaction_policies.py  test_context_call_llm.py  test_context_methods.py  test_context_run_agent.py  test_dsl_agent_loader.py  test_error_locations.py  test_errors.py  test_escalation_codegen.py  test_escalation_grammar.py  test_escalation_transformer.py  test_example_files.py  test_examples.py  test_expecting_array.py  test_filter_expression.py  test_flow_execution.py  test_flow_parameters.py  test_global_variable_interpolation.py  (+27 more)
tools/: ask_user.py  cli.py  cli_tool.py  fs_tool.py  path_utils.py  read_directory_structure.py  read_file.py  search.py  tools.yaml  write_file.py
(+688 files in other folders)
